--- a/meta_customer_history/views/res_partner_view.xml
+++ b/meta_customer_history/views/res_partner_view.xml
@@ -8,7 +8,7 @@
             <xpath expr="//field[@name='vat']" position="after">
                 <field name="last_delivery_date" invisible="1"/>
                 <field name="last_delivery_prods" invisible="1"/>
-                <field name="last_delivery_batch" invisible="0"/>
+                <!-- <field name="last_delivery_batch" invisible="0"/> -->
             </xpath>
         </field>
     </record>
@@ -19,7 +19,8 @@
         <field name="inherit_id" ref="base.view_partner_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='vat']" position="after">
-                <!-- <field name="last_delivery_batch" optional="show"/> -->
+                <field name="total_due_str" optional="show"/>
+                <field name="last_delivery_batch" optional="show"/>
                 <field name="last_delivery_date" optional="show"/>
                 <field name="last_delivery_prods" optional="show"/>
             </xpath>
