--- a/meta_delivery_portal/views/delivery_order_template.xml
+++ b/meta_delivery_portal/views/delivery_order_template.xml
@@ -252,11 +252,11 @@
                     <div t-attf-class="card #{'pb-5' if report_type == 'html' else ''}"
                         id="portal_sale_content">
                         <div t-call="meta_delivery_portal.my_order_portal_content" />
-                        
                     </div>
 
                     <!-- bottom actions -->
-                    <div t-if="sale_order._has_to_be_signed(True) or sale_order._has_to_be_paid(True)"
+                    <div
+                        t-if="sale_order._has_to_be_signed(True) or sale_order._has_to_be_paid(True)"
                         class="row justify-content-center text-center d-print-none pt-1 pb-4">
                         <t t-if="sale_order._has_to_be_signed(True)">
 
@@ -290,6 +290,7 @@
                                 <a role="button" class="btn btn-danger" id="cancelButton" href="#">
                                     <i class="fa fa-times" /> Defer </a>
                             </div>
+
                             <div id="quotation_print" class="col-sm-auto mt8" style="margin-top: 30px !important;">
                                 <t t-set="report_url" t-value="sale_order.get_portal_url(report_type='pdf', download=True)" />
                                 <a role="button" class="btn btn-primary" t-att-href="report_url">
@@ -493,7 +494,7 @@
                                 <span t-field="sale_order.partner_id.map_url" />
                             </a>
                         </t>
-                        <input id="o_url_input" class="form-control W-50"
+                        <input id="o_url_input" class="form-control W-50 o_url_input"
                             placeholder="Enter Google Map Url here ....." type="text"
                             style="height: 50Px; margin-top: 15px;"
                         />
