--- a/meta_customer_fields/views/res_contact_view.xml
+++ b/meta_customer_fields/views/res_contact_view.xml
@@ -24,6 +24,10 @@
                 <field name="customer_type" attrs="{'invisible': [('is_wholesaler', '!=', True)]}" />
                 <field name="remarks"/>
                 <field name="referral_contact"/>
+                <field name="total_due_str" invisible="1"/>
+                <field name="last_delivery_date" invisible="1"/>
+                <field name="last_delivery_prods" invisible="1"/>
+                <field name="last_delivery_batch" invisible="1"/>
             </xpath>
 
             <xpath expr="//group[1]" position="after">
@@ -67,6 +71,10 @@
             <xpath expr="//field[@name='phone']" position="after">
                 <field name="subscription_data" optional="show"/>
                 <field name="referral_contact" optional="show"/>
+                <field name="total_due_str" optional="show"/>
+                <field name="last_delivery_batch" optional="show"/>
+                <field name="last_delivery_date" optional="show"/>
+                <field name="last_delivery_prods" optional="show"/>
             </xpath>
         </field>
     </record>
