--- a/meta_organik_invoice/report/invoice_report.xml
+++ b/meta_organik_invoice/report/invoice_report.xml
@@ -79,7 +79,7 @@
                                     <span t-esc="line.quantity" /> x <span t-esc="line.price_unit" />
                                 </td>
                                 <td style="text-align: right;">
-                                    <span t-esc="line.quantity * line.price_unit" />
+                                    <span t-esc="round((line.quantity * line.price_unit),2)" />
                                 </td>
                             </tr>
                         </t>
