organik chick invoice change delivery portal and invoice

--- a/meta_delivery_portal/views/done_delivery_order_template.xml
+++ b/meta_delivery_portal/views/done_delivery_order_template.xml
@@ -526,7 +526,7 @@
                 <strong>Previous Due + Total</strong>
             </td>
             <td class="text-end">
-                <span t-esc="sale_order.total_payable"/>
+                <span t-esc="round(sale_order.total_payable, 2)"/>
             </td>
         </tr>
         <tr>
