--- a/meta_organik_invoice/report/invoice_report.xml
+++ b/meta_organik_invoice/report/invoice_report.xml
@@ -112,7 +112,12 @@
                                 <strong>Total</strong>
                             </td>
                             <td class="text-end">
-                                <span t-esc="round(current_subtotal)" />
+                                <!-- <t t-if="delivery_amount"> -->
+                                    <span t-esc="round(current_subtotal - delivery_amount, 2)" />
+                                <!-- </t>
+                                <t t-else="">
+                                    <span t-esc="round(current_subtotal, 2)" />
+                                </t> -->
                             </td>
                         </tr>
 
@@ -122,7 +127,7 @@
                                 <span>Discount</span>
                             </td>
                             <td t-if="dis_amount" class="text-end">
-                                (-) <span t-esc="dis_amount" />
+                                (-) <span t-esc="round(dis_amount, 2)" />
                             </td>
                             <td t-else="" class="text-end">(-) 0.00</td>
                         </tr>
@@ -133,7 +138,7 @@
                                 <span>Delivery Fee</span>
                             </td>
                             <td t-if="delivery_amount" class="text-end">
-                                (+) <span t-esc="delivery_amount" />
+                                (+) <span t-esc="round(delivery_amount, 2)" />
                             </td>
                             <td t-else="" class="text-end">
                                 (+) <span>0.00</span>
@@ -179,7 +184,7 @@
                                     </td>
                                     <td class="text-end">
                                         (+) <span
-                                            t-esc="str(int(o.line_ids.sale_line_ids.order_id.prev_due))" />
+                                            t-esc="str(round(o.line_ids.sale_line_ids.order_id.prev_due, 2))" />
                                     </td>
                                 </tr>
                             </t>
@@ -191,7 +196,7 @@
                                     </td>
                                     <td class="text-end">
                                         <span
-                                            t-esc="str(int(o.line_ids.sale_line_ids.order_id.total_payable))" />
+                                            t-esc="str(round(o.line_ids.sale_line_ids.order_id.total_payable, 2))" />
                                     </td>
                                 </tr>
                             </t>
@@ -202,7 +207,7 @@
                                     </td>
                                     <td class="text-end">
                                         (-)<span
-                                            t-esc="str(int(o.line_ids.sale_line_ids.order_id.receipt_paid))" />
+                                            t-esc="str(round(o.line_ids.sale_line_ids.order_id.receipt_paid, 2))" />
                                     </td>
                                 </tr>
                             </t>
@@ -215,7 +220,7 @@
                                     </td>
                                     <td class="text-end">
                                         <span
-                                            t-esc="str(int(o.line_ids.sale_line_ids.order_id.final_due))" />
+                                            t-esc="str(round(o.line_ids.sale_line_ids.order_id.final_due, 2))" />
                                     </td>
                                 </tr>
                             </t>
