new open/close field in Batch and batch integration in sale order line

--- a/meta_batch_order/views/batch_fields_view.xml
+++ b/meta_batch_order/views/batch_fields_view.xml
@@ -15,6 +15,7 @@
 					<field name="expired_chick"/>
 					<field name="demand_qty"/>
                     <field name="avail_chick"/>
+                    <field name="open_close"/>
 				</group>
 			</xpath>
 
