--- a/meta_delivery_portal/views/delivery_order_template.xml
+++ b/meta_delivery_portal/views/delivery_order_template.xml
@@ -255,12 +255,8 @@
                     </div>
 
                     <!-- bottom actions -->
-                    <div
-                        t-if="sale_order._has_to_be_signed(True) or sale_order._has_to_be_paid(True)"
-                        class="row justify-content-center text-center d-print-none pt-1 pb-4">
-                        <t t-if="sale_order._has_to_be_signed(True)">
-
-
+                    <div class="row justify-content-center text-center d-print-none pt-1 pb-4">
+                        <t>
                             <!--OTP
                             Block-->
                             <!--                            <div id="otp_block" style="margin: 20px; display: none">-->
@@ -279,10 +275,10 @@
 
                             <!--Done Button-->
                             <div id="done_button" class="col-sm-auto mt8"
-                                style="margin: 20px; display: none">
+                                style="margin: 20px; display: none;">
                                 <a role="button" class="btn btn-primary" id="doneButton" href="#">
                                     <i class="fa fa-check" />
-                                    <t t-if="sale_order._has_to_be_paid(True)">Done</t>
+                                    <t>Done</t>
                                 </a>
                             </div>
 
@@ -290,8 +286,7 @@
                                 <a role="button" class="btn btn-danger" id="cancelButton" href="#">
                                     <i class="fa fa-times" /> Defer </a>
                             </div>
-				
-			    <div id="quotation_print" class="col-sm-auto mt8" style="margin-top: 30px !important;">
+                            <div id="quotation_print" class="col-sm-auto mt8" style="margin-top: 30px !important;">
                                 <t t-set="report_url" t-value="sale_order.get_portal_url(report_type='pdf', download=True)" />
                                 <a role="button" class="btn btn-primary" t-att-href="report_url">
                                     <button class="btn">Print Invoice</button>
@@ -568,7 +563,8 @@
                                     t-value="current_subtotal + line.price_total"
                                     groups="account.group_show_line_subtotals_tax_included" />
 
-                                <tr t-att-class="'bg-200 fw-bold o_line_section'
+                                <tr
+                                    t-att-class="'bg-200 fw-bold o_line_section'
                                         if line.display_type == 'line_section' else 'fst-italic o_line_note'
                                         if line.display_type == 'line_note' else ''+'o_line_item'"
                                     t-att-data-line-id="line.id"
