--- a/meta_portal_ui/views/Pending_Deliveries.xml
+++ b/meta_portal_ui/views/Pending_Deliveries.xml
@@ -4,31 +4,31 @@
 		<template id="inherit_portal_my_quotations" name="Inherit My Quotations" inherit_id="sale.portal_my_quotations">
 			<xpath expr="." position="replace">
 				<t t-call="portal.portal_layout">
-					<t t-set="breadcrumbs_searchbar" t-value="True"/>
+					<t t-set="breadcrumbs_searchbar" t-value="True" />
 
 					<t t-call="portal.portal_searchbar">
 						<t t-set="title">Quotations</t>
 					</t>
-					
+
 					<t t-if="quotations">
 						<t t-foreach="quotations" t-as="quotation">
 							<ul style="list-style:none; padding-left:0">
 								<li id="single_pending_deliveries_link">
 									<a t-att-href="quotation.get_portal_url()">
-										<span t-out="quotation.name" id="quotation_name"/>
+										<span t-out="quotation.name" id="quotation_name" />
 										<div class="single_pending_deliveries_blk">
 											<div>
-												<t t-foreach="quotation.order_line" t-as="order_line">
+												<t t-foreach="quotation.order_line"
+													t-as="order_line">
 													<t t-if="order_line.product_template_id.id != 1">
 														<ul style="list-style:none; padding-left:0">
 															<li>
 																<p>
-																	<t t-out="order_line.product_template_id.name"/>
-																	<span>
-																		(
-																			<t t-out="order_line.piece_qty"/>
-																		)
-																</span>
+																	<t
+																		t-out="order_line.product_template_id.name" />
+																	<span> ( <t
+																			t-out="order_line.piece_qty" />
+																		) </span>
 																</p>
 															</li>
 														</ul>
@@ -36,8 +36,7 @@
 												</t>
 											</div>
 
-											<p>
-												Tk.<t t-out="quotation.amount_total"/>
+											<p> Tk.<t t-out="quotation.amount_total" />
 											</p>
 										</div>
 
@@ -47,65 +46,170 @@
 									</a>
 								</li>
 							</ul>
-							<!-- <tr>
-								<td><a t-att-href="quotation.get_portal_url()"><t t-out="quotation.name"/></a></td>
-								<td class="text-end"><span t-field="quotation.date_order"/></td>
-								<td class="text-end"><span t-field="quotation.validity_date"/></td>
-								<td class="text-center">
-									<span t-if="quotation.state == 'cancel'" class="badge rounded-pill text-bg-secondary">
-										<i class="fa fa-fw fa-remove"/> Cancelled</span>
-									<span t-if="quotation.is_expired" class="badge rounded-pill text-bg-secondary">
-										<i class="fa fa-fw fa-clock-o"/> Expired</span>
-								</td>
-								<td class="text-end">
-									<span t-field="quotation.amount_total"/>
-								</td>
-							</tr> -->
 						</t>
 					</t>
 					<p t-else="">There are currently no quotations for your account.</p>
 				</t>
-			</xpath>		
+			</xpath>
 		</template>
 
 
 		<!-- Inside Specific Order -->
 		<!-- Inside Specific Order -->
 		<!-- Inside Specific Order -->
-		<template id="inherit_portal_sidebar" name="Inherit Portal Sidebar" inherit_id="portal.portal_record_sidebar">
+		<template id="inherit_portal_sidebar" name="Inherit Portal Sidebar"
+			inherit_id="portal.portal_record_sidebar">
 			<xpath expr="//div[@id='sidebar_content']" position="attributes">
 				<attribute name="style">display:none;</attribute>
 			</xpath>
 		</template>
 
 		<template id="inherit_portal_sale_table" name="Inherit Portal Sale Table" inherit_id="sale.sale_order_portal_content">
-			<xpath expr="//section[@id='details']//table[@id='sales_order_table']//td[@id='product_name']" position="replace">
-				<td id="product_name">
-					<span t-esc="line.product_id.name"/>
-				</td>
+			<!-- Delivery Date after Order Date -->
+			<xpath expr="//div[@id='so_date']/div[1]" position="after">
+				<div class="mb-3 col-6" t-if="sale_order.delivery_date">
+					<strong>Delivery Date:</strong>
+					<span t-field="sale_order.delivery_date" t-options='{"widget": "date"}' />
+				</div>
+			</xpath>
+
+			<!-- Details Table -->
+			<xpath expr="//section[@id='details']" position="attributes">
+				<attribute name="style">display: none;</attribute>
+			</xpath>
+			<xpath expr="//section[@id='details']" position="after">
+				<section id="details" style="page-break-inside: auto;" class="mt32">
+					<h3 id="details">Pricing</h3>
+					<t t-set="display_discount" t-value="True in [line.discount > 0 for line in sale_order.order_line]"/>
+					<t t-set="qty_unit_total" t-value="0"/>
+					<div class="table-responsive">
+						<table t-att-data-order-id="sale_order.id" t-att-data-token="sale_order.access_token" class="table table-sm" id="sales_order_table">
+							<thead class="bg-100">
+								<tr>
+									<th class="text-start" id="product_name_header">Products</th>
+									<th class="text-end">Quantity</th>
+									<th t-attf-class="text-end {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
+										Unit Price
+									</th>
+									<th class="text-end" >
+										<span groups="account.group_show_line_subtotals_tax_excluded">Amount</span>
+										<span groups="account.group_show_line_subtotals_tax_included">Total Price</span>
+									</th>
+								</tr>
+							</thead>
+							<tbody class="sale_tbody">
+	
+								<t t-set="current_subtotal" t-value="0"/>
+								<t t-set="lines_to_report" t-value="sale_order._get_order_lines_to_report()"/>
+	
+								<t t-foreach="lines_to_report" t-as="line">
+									<t t-set="qty_unit_price" t-value="line.product_uom_qty * line.price_unit"/>
+									<t t-set="qty_unit_total" t-value="qty_unit_total + qty_unit_price"/>
+									<t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
+									<t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
+	
+									<tr t-att-class="'bg-200 fw-bold o_line_section' if line.display_type == 'line_section' else 'fst-italic o_line_note' if line.display_type == 'line_note' else ''">
+										<t t-if="not line.display_type">
+											<td id="product_name">
+												<span t-field="line.product_id.name"/>
+											</td>
+											<td class="text-end">
+												<div id="quote_qty">
+													<span t-field="line.product_uom_qty"/>
+													<span t-field="line.product_uom"/>
+												</div>
+											</td>
+											<td t-attf-class="text-end {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
+												<div t-if="line.discount">
+													<t t-out="line.price_unit" t-options='{"widget": "float", "decimal_precision": "Product Price"}'/>
+												</div>
+											</td>
+											<td t-if="not line.is_downpayment" class="text-end">
+												<span t-esc="round(qty_unit_price, 2)" t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}'/>
+											</td>
+										</t>
+									</tr>
+								</t>
+							</tbody>
+						</table>
+					</div>
+					
+					<div id="total_div" class="row" name="q_u_total" style="page-break-inside: avoid;">
+						<div t-attf-class="#{'col-6' if report_type != 'html' else 'col-sm-7 col-md-6'} ms-auto">
+							<table style="width: 100%;">
+								<t t-set="display_discount" t-value="True in [line.discount > 0 for line in sale_order.order_line]"/>
+								<t t-if="display_discount">
+									<tr>
+										<td>
+											<strong>Subtotal</strong>
+										</td>
+										<td style="text-align: end;">
+											<t t-esc="round(sale_order.amount_undiscounted, 2)" t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}'/>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<strong>Discount</strong>
+										</td>
+										<td style="text-align: end;">
+											<t t-esc="round(sale_order.amount_undiscounted - sale_order.amount_total, 2)" t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}'/>
+										</td>
+									</tr>
+								</t>
+								<tr>
+									<td>
+										<strong>Total</strong>
+									</td>
+									<td style="text-align: end;">
+										<t t-esc="sale_order.amount_total" t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}'/>
+									</td>
+								</tr>
+							</table>
+						</div>
+					</div>
+				</section>
 			</xpath>
 		</template>
 
-		<template id="inherit_portal_sale_feedback" name="Inherit Portal Sale Feedback" inherit_id="sale.sale_order_portal_template">
-			<xpath expr="//div[@id='quote_content']//div[@t-if='sale_order._has_to_be_signed(True) or sale_order._has_to_be_paid(True)']//t[@t-if='sale_order._has_to_be_signed(True)']/div[2]" position="attributes">
+
+
+
+		<template id="inherit_portal_sale_feedback" name="Inherit Portal Sale Feedback"
+			inherit_id="sale.sale_order_portal_template">
+			<xpath
+				expr="//div[@id='quote_content']//div[@t-if='sale_order._has_to_be_signed(True) or sale_order._has_to_be_paid(True)']//t[@t-if='sale_order._has_to_be_signed(True)']/div[2]"
+				position="attributes">
 				<attribute name="style">display:none;</attribute>
 			</xpath>
-			<xpath expr="//div[@id='quote_content']//div[@t-if='sale_order._has_to_be_signed(True) or sale_order._has_to_be_paid(True)']//t[@t-if='sale_order._has_to_be_signed(True)']/div[2]" position="after">
+
+			<xpath expr="//form[hasclass('js_website_submit_form')]/main[@id='sign-dialog']"
+				position="before">
+				<div style="padding: 20px; background-color: red; text-align: center;">
+					<strong style="font-size: 20px;">This is not actual amount.Total amount may
+						change.</strong>
+				</div>
+			</xpath>
+
+			<xpath
+				expr="//div[@id='quote_content']//div[@t-if='sale_order._has_to_be_signed(True) or sale_order._has_to_be_paid(True)']//t[@t-if='sale_order._has_to_be_signed(True)']/div[2]"
+				position="after">
 				<div id="remark_button_div" style="display: flex; justify-content: center;">
 					<div class="col-sm-auto mt8">
-						<a style="display:block;" id="give_msg" role="button" class="btn btn-secondary"><i class="fa fa-comment"/> Give message</a>
+						<a style="display:block;" id="give_msg" role="button"
+							class="btn btn-secondary"><i class="fa fa-comment" /> Give message</a>
 					</div>
-					
+
 					<div id="msg_submit_button" class="col-sm-auto mt8" style="display:none;">
-						<input id="msg_content" type="text" class="form-control form-control-sm" placeholder="Type your Message/Remarks......" name="message" />
-						<br/>
+						<input id="msg_content" type="text" class="form-control form-control-sm"
+							placeholder="Type your Message/Remarks......" name="message" />
+						<br />
 						<a id="msg_submit" role="button" class="btn btn-secondary">Submit</a>
 					</div>
 
 					<div id="success_div" class="col-sm-auto mt8" style="display:none;">
 						<strong>Your Message has been sent successfully..</strong>
 					</div>
-	
+
 					<div style="display: none;">
 						<span id="sale_order_id" t-esc="sale_order.id"></span>
 					</div>
