--- a/meta_portal_ui/views/Pending_Deliveries.xml
+++ b/meta_portal_ui/views/Pending_Deliveries.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 	<data>
-		<template id="inherit_portal_my_quotations" name="Inherit My Quotations" inherit_id="sale.portal_my_quotations">
+		<template id="inherit_portal_my_quotations" name="Inherit My Quotations"
+			inherit_id="sale.portal_my_quotations">
 			<xpath expr="." position="replace">
 				<t t-call="portal.portal_layout">
 					<t t-set="breadcrumbs_searchbar" t-value="True" />
@@ -64,7 +65,8 @@
 			</xpath>
 		</template>
 
-		<template id="inherit_portal_sale_table" name="Inherit Portal Sale Table" inherit_id="sale.sale_order_portal_content">
+		<template id="inherit_portal_sale_table" name="Inherit Portal Sale Table"
+			inherit_id="sale.sale_order_portal_content">
 			<!-- Delivery Date after Order Date -->
 			<xpath expr="//div[@id='so_date']/div[1]" position="after">
 				<div class="mb-3 col-6" t-if="sale_order.delivery_date">
@@ -80,52 +82,71 @@
 			<xpath expr="//section[@id='details']" position="after">
 				<section id="details" style="page-break-inside: auto;" class="mt32">
 					<h3 id="details">Pricing</h3>
-					<t t-set="display_discount" t-value="True in [line.discount > 0 for line in sale_order.order_line]"/>
-					<t t-set="qty_unit_total" t-value="0"/>
+					<t t-set="display_discount"
+						t-value="True in [line.discount > 0 for line in sale_order.order_line]" />
+					<t t-set="qty_unit_total" t-value="0" />
 					<div class="table-responsive">
-						<table t-att-data-order-id="sale_order.id" t-att-data-token="sale_order.access_token" class="table table-sm" id="sales_order_table">
+						<table t-att-data-order-id="sale_order.id"
+							t-att-data-token="sale_order.access_token" class="table table-sm"
+							id="sales_order_table">
 							<thead class="bg-100">
 								<tr>
 									<th class="text-start" id="product_name_header">Products</th>
 									<th class="text-end">Quantity</th>
-									<th t-attf-class="text-end {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
+									<th
+										t-attf-class="text-end {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
 										Unit Price
 									</th>
-									<th class="text-end" >
-										<span groups="account.group_show_line_subtotals_tax_excluded">Amount</span>
-										<span groups="account.group_show_line_subtotals_tax_included">Total Price</span>
+									<th class="text-end">
+										<span
+											groups="account.group_show_line_subtotals_tax_excluded">
+											Amount</span>
+										<span
+											groups="account.group_show_line_subtotals_tax_included">Total
+											Price</span>
 									</th>
 								</tr>
 							</thead>
 							<tbody class="sale_tbody">
-	
-								<t t-set="current_subtotal" t-value="0"/>
-								<t t-set="lines_to_report" t-value="sale_order._get_order_lines_to_report()"/>
-	
+
+								<t t-set="current_subtotal" t-value="0" />
+								<t t-set="lines_to_report"
+									t-value="sale_order._get_order_lines_to_report()" />
+
 								<t t-foreach="lines_to_report" t-as="line">
-									<t t-set="qty_unit_price" t-value="line.product_uom_qty * line.price_unit"/>
-									<t t-set="qty_unit_total" t-value="qty_unit_total + qty_unit_price"/>
-									<t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
-									<t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
-	
-									<tr t-att-class="'bg-200 fw-bold o_line_section' if line.display_type == 'line_section' else 'fst-italic o_line_note' if line.display_type == 'line_note' else ''">
+									<t t-set="qty_unit_price"
+										t-value="line.product_uom_qty * line.price_unit" />
+									<t t-set="qty_unit_total"
+										t-value="qty_unit_total + qty_unit_price" />
+									<t t-set="current_subtotal"
+										t-value="current_subtotal + line.price_subtotal"
+										groups="account.group_show_line_subtotals_tax_excluded" />
+									<t t-set="current_subtotal"
+										t-value="current_subtotal + line.price_total"
+										groups="account.group_show_line_subtotals_tax_included" />
+
+									<tr
+										t-att-class="'bg-200 fw-bold o_line_section' if line.display_type == 'line_section' else 'fst-italic o_line_note' if line.display_type == 'line_note' else ''">
 										<t t-if="not line.display_type">
 											<td id="product_name">
-												<span t-field="line.product_id.name"/>
+												<span t-field="line.product_id.name" />
 											</td>
 											<td class="text-end">
 												<div id="quote_qty">
-													<span t-field="line.product_uom_qty"/>
-													<span t-field="line.product_uom"/>
+													<span t-field="line.product_uom_qty" />
+													<span t-field="line.product_uom" />
 												</div>
 											</td>
-											<td t-attf-class="text-end {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
+											<td
+												t-attf-class="text-end {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
 												<div t-if="line.discount">
-													<t t-out="line.price_unit" t-options='{"widget": "float", "decimal_precision": "Product Price"}'/>
+													<t t-out="line.price_unit"
+														t-options='{"widget": "float", "decimal_precision": "Product Price"}' />
 												</div>
 											</td>
 											<td t-if="not line.is_downpayment" class="text-end">
-												<span t-esc="round(qty_unit_price, 2)" t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}'/>
+												<span t-esc="round(qty_unit_price, 2)"
+													t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}' />
 											</td>
 										</t>
 									</tr>
@@ -133,18 +154,22 @@
 							</tbody>
 						</table>
 					</div>
-					
-					<div id="total_div" class="row" name="q_u_total" style="page-break-inside: avoid;">
-						<div t-attf-class="#{'col-6' if report_type != 'html' else 'col-sm-7 col-md-6'} ms-auto">
+
+					<div id="total_div" class="row" name="q_u_total"
+						style="page-break-inside: avoid;">
+						<div
+							t-attf-class="#{'col-6' if report_type != 'html' else 'col-sm-7 col-md-6'} ms-auto">
 							<table style="width: 100%;">
-								<t t-set="display_discount" t-value="True in [line.discount > 0 for line in sale_order.order_line]"/>
+								<t t-set="display_discount"
+									t-value="True in [line.discount > 0 for line in sale_order.order_line]" />
 								<t t-if="display_discount">
 									<tr>
 										<td>
 											<strong>Subtotal</strong>
 										</td>
 										<td style="text-align: end;">
-											<t t-esc="round(sale_order.amount_undiscounted, 2)" t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}'/>
+											<t t-esc="round(sale_order.amount_undiscounted, 2)"
+												t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}' />
 										</td>
 									</tr>
 									<tr>
@@ -152,7 +177,9 @@
 											<strong>Discount</strong>
 										</td>
 										<td style="text-align: end;">
-											<t t-esc="round(sale_order.amount_undiscounted - sale_order.amount_total, 2)" t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}'/>
+											<t
+												t-esc="round(sale_order.amount_undiscounted - sale_order.amount_total, 2)"
+												t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}' />
 										</td>
 									</tr>
 								</t>
@@ -161,17 +188,25 @@
 										<strong>Total</strong>
 									</td>
 									<td style="text-align: end;">
-										<t t-esc="sale_order.amount_total" t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}'/>
+										<t t-esc="sale_order.amount_total"
+											t-options='{"widget": "monetary", "display_currency": sale_order.pricelist_id.currency_id}' />
 									</td>
 								</tr>
 							</table>
+							<div style="	
+											margin-top: 15px;
+											background-color: red;
+											color: white;
+											padding: 5px;
+										">
+								<span>This is not actual amount. It may change based on actual
+									weight.</span>
+							</div>
 						</div>
 					</div>
 				</section>
 			</xpath>
 		</template>
-
-
 
 
 		<template id="inherit_portal_sale_feedback" name="Inherit Portal Sale Feedback"
