--- a/meta_batch_order/views/web_sale_view.xml
+++ b/meta_batch_order/views/web_sale_view.xml
@@ -11,43 +11,32 @@
                 <input type="text" class="form-control quantity text-center" data-min="1" name="add_qty" t-att-value="add_qty or 1"/>
             </t>
         </xpath>
-        <!-- Add Pcs text after Quantity in Shop portal -->
+
+        <!-- Add web_uom_id text after Quantity in Shop portal -->
         <xpath expr="//div[@id='add_to_cart_wrap']" position="before">
-            <h4>Pcs</h4>
+            <h4 t-esc="combination_info['web_uom_id']"/>
+        </xpath>
+    </template>
+
+
+    <!-- Show special_text text after Quantity in Shop portal -->
+    <template id="product_special_text" inherit_id="website_sale.product" name="Special Text">
+        <xpath expr="//div[@id='product_attributes_simple']" position="before">
+            <div id="prod_special_text_div" style="margin-top: 10px;">
+                <span t-esc="combination_info['special_text']"/>
+            </div>
         </xpath>
     </template>
 
 
 
-    <!-- Add Per KG text after Price in Shop portal -->
+    <!-- Show Per KG text after Price in Shop portal -->
     <template id="product_price_kg" inherit_id="website_sale.product_price" name="Price per KG">
         <xpath expr="//span[hasclass('oe_price')]" position="after">
-            <h4>Per KG</h4>
+            <h4>Per <t t-esc="combination_info['base_unit_name']"/></h4>
         </xpath>
     </template>
 
-
-
-<!--    <template id="add_cart_position" inherit_id="website_sale.product" name="ADD CART POSITION">-->
-<!--        <xpath expr="//div[@id='o_wsale_cta_wrapper']" position="replace">-->
-<!--            <div id="o_wsale_cta_wrapper" class="d-flex flex-wrap align-items-center">-->
-<!--                <div>-->
-<!--                    <t t-set="hasQuantities" t-value="false"/>-->
-<!--                    <t t-set="hasBuyNow" t-value="false"/>-->
-<!--                    <t t-set="ctaSizeBig" t-value="not hasQuantities or not hasBuyNow"/>-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <div id="add_to_cart_wrap" t-attf-class="{{'d-none' if combination_info['prevent_zero_price_sale'] else 'd-inline-flex'}} align-items-center mb-2 me-auto">-->
-<!--                        <a data-animation-selector=".o_wsale_product_images" role="button" id="add_to_cart" t-attf-class="btn btn-primary js_check_product a-submit flex-grow-1 #{'btn-lg' if ctaSizeBig else ''}" href="#">-->
-<!--                            <i class="fa fa-shopping-cart me-2"/>-->
-<!--                            <span style="font-weight: bold">ADD TO CART</span>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div id="product_option_block" class="d-flex flex-wrap w-100"/>-->
-<!--            </div>-->
-<!--        </xpath>-->
-<!--    </template>-->
 
 
 
@@ -136,9 +125,6 @@
                             </div>
                         </td>
 
-
-
-
                         <td class="text-center td-price" name="price">
                             <t t-set="combination" t-value="line.product_id.product_template_attribute_value_ids + line.product_no_variant_attribute_value_ids"/>
                             <t t-set="combination_info" t-value="line.product_id.product_tmpl_id._get_combination_info(combination, pricelist=website_sale_order.pricelist_id, add_qty=line.product_uom_qty)"/>
@@ -180,5 +166,4 @@
         </xpath>
 
     </template>
-
 </odoo>
