--- a/otp_auth/views/auth_signup_login_templates.xml
+++ b/otp_auth/views/auth_signup_login_templates.xml
@@ -100,10 +100,14 @@
                 <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()" />
                 <input type="hidden" name="partner_id" t-att-value="partner.id"/>
                 <input type="hidden" name="redirect" t-att-value="redirect" />
+                <!-- <input type="hidden" name="mobile" t-att-value="mobile" /> -->
 
                 <h3>Please verify your account.</h3>
                 <p style="margin-bottom: 20px;"> An Otp has been sent to <strong>
                     <t t-esc="partner.email"/>
+<!--                    <t t-if="mobile">-->
+<!--                    and <t t-esc="mobile"/>-->
+<!--                    </t>-->
                     </strong>
                 </p>
                 <div class="form-group field-name">
@@ -113,6 +117,7 @@
 
                 <div class="text-center oe_login_buttons pt-3">
                     <button id="verify_otp" type="submit" class="btn btn-primary btn-block"> Verify </button>
+                    <!-- <a id="sendAgain" t-attf-href="/otp/send" class="btn btn-link btn-sm" role="button">Did Not Received OTP?</a> -->
                     <a id="sendAgain" t-attf-href="/otp/verification" class="btn btn-link btn-sm" role="button">Did Not Received OTP?</a>
                 </div>
             </form>
